--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.2.1",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
+    "react-aria-components": "^1.15.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.1",
     "swiper": "^12.1.2",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.1"
   },
   "devDependencies": {
